# GrainCosmos

./: .gitignore  CLAUDE.md  CMakeLists.txt  PLUGINS.md  README.md  ROADMAP.md  fix-cmake-and-build.sh
.claude/: CLAUDE.md
.claude/agents/: foundation-agent.md  foundation-shell-agent.md  research-planning-agent.md  troubleshooter.md  validation-agent.md
.claude/commands/: implement.md  plan.md
.claude/schemas/: subagent-report.json
.claude/skills/: debug-strategy.md
.claude/skills/build-automation/: SKILL.md
.claude/skills/context-resume/: SKILL.md
.claude/skills/deep-research/: SKILL.md
.claude/skills/deep-research/assets/: research-progress.md
.claude/skills/deep-research/references/: error-handling.md  integrations.md  research-protocol.md
.claude/skills/design-sync/: SKILL.md
.claude/skills/design-sync/references/: decision-gates.md  drift-detection.md  error-handling.md
.claude/skills/plugin-ideation/: SKILL.md
.claude/skills/plugin-ideation/references/: parallel-workflow-test-scenario.md
.claude/skills/plugin-improve/: SKILL.md
.claude/skills/plugin-lifecycle/: SKILL.md
.claude/skills/plugin-lifecycle/references/: decision-menu-protocol.md  invocation-protocol.md  mode-3-reset.md  mode-4-destroy.md
.claude/skills/plugin-packaging/: SKILL.md
.claude/skills/plugin-planning/: SKILL.md
.claude/skills/plugin-planning/assets/: architecture-template.md
.claude/skills/plugin-planning/references/: preconditions.md  stage-0-research.md
.claude/skills/plugin-testing/: SKILL.md
.claude/skills/plugin-workflow/: SKILL.md
.claude/skills/plugin-workflow/references/: checkpoint-protocol.md  error-handling.md  integration-contracts.md  phase-aware-dispatch.md  stage-2-foundation-shell.md  stage-3-dsp.md  stage-4-gui.md  state-management.md
.claude/skills/system-setup/: SKILL.md
.claude/skills/system-setup/references/: execution-notes.md
.claude/skills/troubleshooting-docs/: SKILL.md
.claude/skills/troubleshooting-docs/references/: example-walkthrough.md
.claude/skills/ui-mockup/: SKILL.md
.claude/skills/ui-mockup/references/: decision-menus.md
.claude/skills/workflow-reconciliation/: SKILL.md
PFS K5sano/: Juceのソース.md
PFS K5sano/.obsidian/: workspace.json
Snapshot/GrainCosmosMB-nopreset.VST3/Contents/: Info.plist
Snapshot/GrainCosmosMB-nopreset.VST3/Contents/MacOS/: GrainCosmos
Snapshot/GrainCosmosMB-preset.VST3/Contents/MacOS/: GrainCosmos
Snapshot/GrainCosmosMB-preset.VST3/Contents/Resources/: moduleinfo.json
Snapshot/GrainCosmosMB-preset.VST3/Contents/_CodeSignature/: CodeResources
WebViewDemoTest/: CMakeLists.txt
WebViewDemoTest/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
analyses/: master-optimization-roadmap.md  task-13-implementation-report.md  task-13-validation-subagent-spec.md
architecture/: 11-build-automation-architecture.md
plugins/AbyssVerb/: CMakeLists.txt
plugins/AbyssVerb/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/AutoClip/.ideas/mockups/: v5-integration-checklist.md
plugins/DroneCosmos/: CMakeLists.txt
plugins/DroneCosmos/.ideas/: SESSION-SUMMARY.md  architecture.md  creative-brief.md  daw-test-checklist.md  mod-range-feature.md  modulation-scaling-update.md  parameter-spec.md  phase1-complete.md  plan.md  preset-system.md  self-feedback-extension.md
plugins/DroneCosmos/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/FlutterVerb/: .continue-here.md  CMakeLists.txt  JUCE
plugins/FlutterVerb/.ideas/: plan.md
plugins/FlutterVerb/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/FlutterVerb/Source/ui/public/: index.html
plugins/GainKnob/: .continue-here.md  CHANGELOG.md  CMakeLists.txt
plugins/GainKnob/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/GrainCosmos/: .continue-here.md  CMakeLists.txt  CMakeLists.txt.backup
plugins/GrainCosmos/.ideas/: architecture.md  creative-brief.md  parameter-spec.md  plan.md  research-findings-level2.md  research-findings.md
plugins/GrainCosmos/.ideas/mockups/: check_constraints.sh  layout_validation.sh  v1-ui-test.html  v1-ui.yaml  v2-ui-test.html  v2-ui.yaml  v3-CMakeLists-SNIPPET.txt  v3-PluginEditor-TEMPLATE.cpp  v3-PluginEditor-TEMPLATE.h  v3-integration-checklist.md  v3-ui-test.html  v3-ui.yaml  validate.sh  validate_final.sh  validate_html.sh  validate_html_fixed.sh
plugins/GrainCosmos/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.cpp.broken  PluginProcessor.cpp.v1_0_0  PluginProcessor.h.v1_0_0_WORKING  XYPadComponent.h
plugins/GrainCosmos/Source/ui/public/: index.html
plugins/LushVerb/.ideas/: .continue-here.md
plugins/RadioMusic/: .continue-here.md  CMakeLists.txt
plugins/RadioMusic/.ideas/: plan.md
plugins/RadioMusic/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Scatter/: .continue-here.md
plugins/Scatter/Source/: PluginEditor.cpp  PluginEditor.h
plugins/TapeAge/: CHANGELOG.md  CMakeLists.txt
plugins/TapeAge/.ideas/: .continue-here.md
plugins/TapeAge/.ideas/mockups/: v3-CMakeLists.txt  v3-PluginEditor.cpp  v3-PluginEditor.h  v3-integration-checklist.md  v3-ui.html
plugins/TapeAge/Source/ui/public/: index.html
plugins/ViolinBass/: CMakeLists.txt
plugins/ViolinBass/src/: PitchShifter.cpp  PitchShifter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
prompts/: 002-migrate-plugin-structure.md  008-create-reconcile-command.md
scripts/: build-and-install.sh
skills-audit/: plugin-lifecycle-fixes-summary.md  plugin-workflow-fixes-applied.md
tests/: VERIFICATION-SUMMARY.md  enforcement-scenarios.md  enforcement-verification-detailed.md  enforcement-verification-results.md
troubleshooting/patterns/: juce8-critical-patterns.md
